Updating database functionality.

--- a/news_scraper.ipynb
+++ b/news_scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,6 +35,32 @@
     "from bs4 import BeautifulSoup\n",
     "import re\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('al.com',),\n",
+       " ('www.fox10tv.com',),\n",
+       " ('www.al.com',),\n",
+       " ('www.wbrc.com/',),\n",
+       " ('www.al.com/birmingham',),\n",
+       " ('https://www.al.com/birmingham/',),\n",
+       " ('https://www.whnt.com/',)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dbc.grab_sources()"
    ]
   },
   {
@@ -151,7 +177,7 @@
    "source": [
     "### Fox - Washington, DC news scraper\n",
     "def wdc_fox_scraper():\n",
-    "    wdc_fox = urlopen('https://www.fox5dc.com/')\n",
+    "    wdc_fox = urlopen('www.fox5dc.com/')\n",
     "    wdc_soup = BeautifulSoup(wdc_fox, 'html.parser')\n",
     "    articles = wdc_soup.find_all('article')\n",
     "\n",
@@ -241,7 +267,7 @@
    "source": [
     "### NBC - Washington, D.C. News Scraper\n",
     "def nbc_dc_news_scraper():\n",
-    "    wdc_nbc4 = urlopen('https://www.nbcwashington.com/')\n",
+    "    wdc_nbc4 = urlopen('www.nbcwashington.com/')\n",
     "    wdc_nbc4_soup = BeautifulSoup(wdc_nbc4, 'html.parser')\n",
     "    articles = wdc_nbc4_soup.find_all(class_='story-card__title')\n",
     "    titles = []\n",
@@ -322,7 +348,7 @@
     "\n",
     "def wsb_tv2_scraper():\n",
     "\n",
-    "    wsb_tv2 = urlopen('https://www.wsbtv.com/')\n",
+    "    wsb_tv2 = urlopen('www.wsbtv.com/')\n",
     "    wsb_tv2_soup = BeautifulSoup(wsb_tv2,'html.parser')\n",
     "    articles = wsb_tv2_soup.find_all(class_='unstyled-link')\n",
     "\n",
