Debugged DC Scraper.

--- a/news_scraper.ipynb
+++ b/news_scraper.ipynb
@@ -43,15 +43,157 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CDC Shortens COVID-19 Quarantine to 10 Days With No Symptoms\n",
+      "Suspect Charged in Arlington Rape Cold Cases After 29 Years\n",
+      "Wolf Trap Reimagines Holiday Sing-A-Long as Virtual Event\n",
+      "Coronavirus in DC, Maryland, Virginia: What to Know on Dec. 2\n",
+      "Loose Bolts Found on Metro Train That Separated on Red Line\n",
+      "Virus Updates: WH Task Force Warns States COVID Risk to Americans at ‘Historic High'\n",
+      "‘Difficult Decisions': First COVID-19 Vaccines Won't Be Enough for All DC-Area Health ...\n",
+      "DC Area's Pandemic Traffic Trends: Congestion Leveling Off\n",
+      "Woman Dies After Being Found Shot in Car in Northeast DC\n",
+      "Bowling Alley Manager Beaten After Asking Patrons to Wear Masks, Maryland Police Say\n",
+      "DC Organization Says Need for Help ‘Unprecedented' This Giving Tuesday\n",
+      "Car Crashes Into Whole Foods in Fairfax County\n",
+      "Bowling Alley Manager Beaten After Asking Patrons to Wear Masks, Maryland Police Say\n",
+      "Trump, Kushner Companies Were Major Beneficiaries of PPP Loans\n",
+      "Suspect Charged in Arlington Rape Cold Cases After 29 Years\n",
+      "‘I Was Prepared to Die': Maryland TikTok Dancer Describes Home Invasion Caught on Video\n",
+      "Watch News4 Live\n",
+      "CDC Shortens Quarantine Recommendation to 10 Days With No Symptoms\n",
+      "Congress Plans $908B COVID Bill as Biden Pushes for Relief Passage\n",
+      "Olympic Fans From Abroad May Have Health Tracked by App\n",
+      "NYC Hotel Replaces Beds With Tables, Turning Vacancy Into Private Dining Experience\n",
+      "‘Autonomous Zone' NYC Bar Shut Down, Owner Arrested After Openly Defying COVID Rules\n",
+      "Transition Latest: Biden to Discuss Economic Crisis With Workers, Small Biz Owners\n",
+      "‘Someone's Going to Get Killed': Ga. Official Rebukes Trump, GOP Over Post-Election Rhetoric\n",
+      "Disputing Trump, Barr Says No Widespread Election Fraud\n",
+      "Fired Cybersecurity Chief Responds After Trump Campaign Lawyer Says He Should Be Shot\n",
+      "Transition Latest: Harris Promises Action on Hunger; Trump Challenges Wisconsin  Results\n",
+      "Trump, Kushner Companies Were Major Beneficiaries of PPP Loans\n",
+      "US Tightens Definition of Service Animals Allowed on Planes\n",
+      "It's Beginning to Look Like Christmas at Rockefeller Center Despite Pandemic\n",
+      "President Trump Has Discussed Possibility of Pardons for Family Members, Sources Say\n",
+      "US Changes Definition of Service Animals Allowed on Planes\n",
+      "Trump Threatens to Veto Defense Bill Over Social Media Protections\n",
+      "UK Becomes the First to Approve Pfizer-BioNTech Covid Vaccine, Rollout Due Next Week\n",
+      "Central Florida School District Spammed as Students Receive Racist Emails\n",
+      "Follow Your Heart: Meet the 16-Year-Old Beauty Shop Owner Breaking Barriers in the Haircare Industry\n",
+      "Trans Activists Speak on Laverne Cox's Attack, Elliot Page's Coming Out and the Wide Range of LGBTQ Experience\n",
+      "U.K. Becomes First Country to Approve the Pfizer-BioNTech COVID-19 Vaccine, But the U.S. Is Close Behind\n",
+      "‘This Is Us' Star Chris Sullivan on the Show's Pandemic Storyline, His Own Newborn and Debut Album\n",
+      "Why Trump's Approval of Firing Squads for Executions Is ‘Largely Symbolic,' But Still Leaves ‘a Mess' for Biden\n",
+      "At Least a Dozen Trump Political Appointees Approved for Civil Servant Positions\n",
+      "Shared Custody Raises COVID-19 Concerns as Kids Travel Between Households for Holidays\n",
+      "Calls for More Transparency With Coronavirus Cases Inside Maryland Casinos\n",
+      "Postal Inspectors Investigate Series of Mail Theft Complaints in Maryland\n",
+      "Priest Among McCarrick Accusers in Lawsuit Filed Against Vatican\n",
+      "Judge Throws Out Trump Rules Limiting Skilled-Worker Visas\n",
+      "Maryland Governor Announces Steps to Boost Hospital Beds\n",
+      "Pushed to Rush, FDA Head Says Feds Will Get Vaccine ‘Right'\n",
+      "Viral TikToks Offer Firsthand Accounts of Vaccine Trials, Debunk Misinformation\n",
+      "‘Good Riddance': Tech's Flight From San Francisco Is a Relief to Some Advocates\n",
+      "YouTube Suspends OANN for a Week After It Posted Fake COVID-19 Cure\n",
+      "Federal Investigators Looking Into Potential ‘Bribery-for-Pardon' Scheme\n",
+      "CDC Votes to Give Health Care Workers, Long-Term Care Patients First COVID-19 Vaccine\n",
+      "DOJ Investigating Potential White House ‘Bribery-for-Pardon' Scheme\n",
+      "Rafer Johnson, 1960 Olympic Decathlon Champion, Dies at 86\n",
+      "Florida Women Plead Guilty in Sex Sting Involving New England Patriots Owner\n",
+      "Women's Team, US Soccer Settle Part of Their Lawsuit\n",
+      "Hidden History Weekend Starts Friday in West Virginia\n",
+      "Your 2020 Fireworks Finder: How to Safely Watch in DC, Maryland, Virginia\n",
+      "Virginia Ski Resort Opens With $1M in Upgrades\n",
+      "Man Who Fell Through NYC Sidewalk Into Nest of Rats ‘the Size of Puppies' Files Suit\n",
+      "Mysterious Shiny Monolith Found in Otherworldly Utah Desert\n",
+      "Police Accuse Maryland Man of Spraying Women in Stores\n",
+      "New DNA information leads police to serial rape suspect in Virginia nearly 30 years later  4 hours ago\n",
+      "Britain authorizes COVID vaccine for emergency use  8 hours ago\n",
+      "2021 Maryland State Police Polar Bear Plunge goes ‘all virtual’ due to COVID-19 case spike in state  8 hours ago\n",
+      "The US added 4M COVID-19 cases in November, more than most countries reported all year\n",
+      "Glen Burnie bowling alley manager attacked by 8 men who refused to wear masks, police say  6 hours ago\n",
+      "DC animal shelter puts 3 kittens in running for White House cat  4 hours ago\n",
+      "1 in 6 cancer patients who contract COVID-19 die from it, doctor says  3 hours ago\n",
+      "Amazon cancels potential Gaithersburg distribution center plan  6 hours ago\n",
+      "Chilly, dry and breezy Wednesday with highs in the 40s  8 hours ago\n",
+      "DC police ID woman found shot to death in a vehicle in Northeast  5 hours ago\n",
+      "Maryland loses youngest COVID-19 victim to date: a 1-year-old boy\n",
+      "No more emotional support animals on planes after DOT closes major loophole  9 mins ago\n",
+      "Maryland game against Michigan State canceled after Coach Locksley tests positive for COVID-19  31 mins ago\n",
+      "video  1-on-1 with magician Xavier Mortimer\n",
+      "video  Prince George's County native Isis King talks LGBTQ rights and more!\n",
+      "video  Workout Wednesday with fitness expert Jackie Paige\n",
+      "video  Dulles Town Center launches new e-commerce platform\n",
+      "video  Maryland’s COVID-19 hospital capacity\n",
+      "video  1 in 6 cancer patients who contract COVID-19 die from it, doctor says\n",
+      "DC Results\n",
+      "Maryland Results\n",
+      "Virginia Results\n",
+      "Electoral College Map\n",
+      "Election 2020: Lawsuits filed, recounts requested by Trump campaign — here’s where they stand\n",
+      "'Someone's gonna get shot': Georgia official calls out Trump, senators over harsh election rhetoric\n",
+      "Attorney General Bill Barr says no evidence of widespread fraud in 2020 election\n",
+      "Trump campaign files lawsuit in Wisconsin after requested recount\n",
+      "The Paolini Perspective: Episode 128\n",
+      "The Paolini Perspective Episode 127\n",
+      "Unconventional Wisdom: Brenda Frese\n",
+      "The Good Word: Phil Thornton\n",
+      "University of Maryland football game canceled due to Michigan COVID-19 concerns The University of Maryland’s football game against Michigan scheduled for Saturday has been canceled due to COVID-19 concerns. 26 mins ago\n",
+      "Thousands of Prince William County students return to the classroom  1 hour ago\n",
+      "1 in 6 cancer patients who contract COVID-19 die from it, doctor says  3 hours ago\n",
+      "University of Maryland, George Mason Friday game canceled due to COVID-19 case  4 hours ago\n",
+      "Oregon mink farm confirms presence of coronavirus  5 hours ago\n",
+      "Glen Burnie bowling alley manager attacked by 8 men who refused to wear masks, police say  6 hours ago\n",
+      "Maryland game against Michigan State canceled after Coach Locksley tests positive for COVID-19 Maryland Athletics has canceled Saturday’s scheduled football game against Michigan State after Maryland Head Coach Michael Locksley tested positive for COVID-19 yesterday. Locksley is isolating at home and the game will not be rescheduled.  31 mins ago\n",
+      "Howard County police warn of ‘sextortion,’ online predators  2 hours ago\n",
+      "New DNA information leads police to serial rape suspect in Virginia nearly 30 years later  4 hours ago\n",
+      "DC police ID woman found shot to death in a vehicle in Northeast  5 hours ago\n",
+      "Amazon cancels potential Gaithersburg distribution center plan  6 hours ago\n",
+      "DOJ probing scheme to lobby White House for presidential pardon\n",
+      "Trump teases 2024 presidential run during White House Christmas party President Donald Trump is teasing running again for president in 2024 as he hosted a holiday reception at the White House. 2 hours ago\n",
+      "Election 2020: Lawsuits filed, recounts requested by Trump campaign — here’s where they stand  3 hours ago\n",
+      "'Someone's gonna get shot': Georgia official calls out Trump, senators over harsh election rhetoric\n",
+      "DOJ probing scheme to lobby White House for presidential pardon\n",
+      "Attorney General Bill Barr says no evidence of widespread fraud in 2020 election\n",
+      "US Attorney General Bill Barr appoints special counsel to investigate Trump-Russia probe\n",
+      "video  1-on-1 with magician Xavier Mortimer Magician and entertainer Xavier Mortimer wows FOX 5’s Holly Morris with a one-on-one magic experience! 2 hours ago\n",
+      "video  Prince George's County native Isis King talks LGBTQ rights and more!  2 hours ago\n",
+      "video  Workout Wednesday with fitness expert Jackie Paige  2 hours ago\n",
+      "video  Isla Fisher, Jillian Bell and Jillian Shea Spaeder in Godmothered  1 day ago\n",
+      "video  Creating stay at home magic with Niecy Nash  1 day ago\n",
+      "video  Josh Duhamel, Dan Bakkedahl star in Buddy Games  1 day ago\n",
+      "Pokémon card could sell for $500G, breaking records A 20-year-old Pokémon card could become the most expensive Pokémon card ever sold, fetching $500,000, British news agency SWNS reports. 4 hours ago\n",
+      "Dr. Fauci among People magazine's '2020 People of the Year'  4 hours ago\n",
+      "'Juno' star Elliot Page, formerly known as Ellen Page, comes out as transgender  1 day ago\n",
+      "#WakandaForever: Hollywood, fans remember Chadwick Boseman on his birthday  2 days ago\n",
+      "YouTube star Jake Paul knocks out ex-NBA star Nate Robinson in fight  3 days ago\n",
+      "Dave Prowse, actor who played Darth Vader, dies at 85  3 days ago\n",
+      "Election 2020: Lawsuits filed, recounts requested by Trump campaign — here’s where they stand President Donald Trump's campaign has filed a barrage of lawsuits amid President-elect Joe Biden's win — leveling, without proof, accusations of large-scale voter fraud in states that broke for Biden. 3 hours ago\n",
+      "Oregon mink farm confirms presence of coronavirus  5 hours ago\n",
+      "San Francisco bans smoking, vaping tobacco in apartments but says weed is OK  5 hours ago\n",
+      "'Someone's gonna get shot': Georgia official calls out Trump, senators over harsh election rhetoric\n",
+      "'A senseless tragedy': Polk teens charged as adults after woman dies weeks after being run over\n",
+      "41 attendees of swingers convention in New Orleans test positive for COVID-19\n",
+      "Attorney: Employers likely able to require COVID-19 vaccine As coronavirus vaccine candidates make their way closer to possible emergency use authorization by U.S. regulators, many are wondering if employers can require employees to get the vaccine. A D.C.-area employment attorney and existing Equal Employment Opportunity Commission guidance point to the answer being yes.\n",
+      "Work in paradise: Hawaii offering incentives to remote workers who move to state\n",
+      "Bipartisan lawmakers push $908B plan to break virus impasse  1 day ago\n",
+      "Guide to Giving Tuesday: Being effective with generosity in 2020  1 day ago\n",
+      "McConnell says 'no reason' coronavirus relief shouldn't pass by year's end  1 day ago\n",
+      "'Totally different atmosphere:' Grocery store employees speak out as virus cases spike  1 day ago\n",
+      "Washington Football Team, Pittsburgh Steelers game moves to next Monday For the first time under new coach Ron Rivera, Washington is the proud owner of a two-game winning streak. 1 day ago\n",
+      "Alex Smith, Washington in 1st after Thanksgiving win over Cowboys  5 days ago\n",
+      "Alex Smith gets Thanksgiving nods for Washington football team  6 days ago\n",
+      "Washington's Week 11 keys to the game against Cincinnati  November 22\n",
+      "John Wall wants trade out of Washington: report  November 21\n",
+      "Wizards select Israeli player Deni Avdija with the 9th pick in the 2020 NBA Draft  November 18\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[('al.com',),\n",
-       " ('www.fox10tv.com',),\n",
-       " ('www.al.com',),\n",
-       " ('www.wbrc.com/',),\n",
-       " ('www.al.com/birmingham',),\n",
-       " ('https://www.al.com/birmingham/',),\n",
-       " ('https://www.whnt.com/',)]"
+       "'Program has sucessfully scraped and saved the data.'"
       ]
      },
      "execution_count": 4,
@@ -60,27 +202,7 @@
     }
    ],
    "source": [
-    "dbc.grab_sources()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Program has sucessfully scraped and saved the data.'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# main.run_all()"
+    "main.run_all()"
    ]
   },
   {
