Adding sites from Seattle and San Francisco.

--- a/news_scraper.ipynb
+++ b/news_scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,13 +152,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -245,23 +238,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['WA Notify app is alerting users of coronavirus exposures', 'Seahawks playing for big stakes in finale vs. 49ers Sunday', '6-year-old child, woman killed in 2-car collision on SR-702 near Yelm', 'Reports: Larry King, 87, in hospital with COVID-19', '1 dead, 2 seriously hurt after car crashes into power pole on Camano Island', 'Quinault Tribe recall 29 tons of Dungeness crab due to toxin', 'Reports: Larry King, 87, in hospital with COVID-19', 'Here are NFL games with playoff implications in Week 17', '3rd body found after landslide in Norway; 7 still missing', 'Appeals court dismisses lawsuit aimed at giving Pence power to overturn election', 'NBA Hall of Famer Paul Westphal dead at 70', \"Iran plans 20% uranium enrichment 'as soon as possible'\", 'Reports: Larry King, 87, in hospital with COVID-19', 'Here are NFL games with playoff implications in Week 17', '3rd body found after landslide in Norway; 7 still missing', 'Appeals court dismisses lawsuit aimed at giving Pence power to overturn election', 'NBA Hall of Famer Paul Westphal dead at 70', \"Iran plans 20% uranium enrichment 'as soon as possible'\"]\n"
+     ]
+    }
+   ],
    "source": [
-    "seattle_times = urlopen('https://www.seattletimes.com/seattle-news/')\n",
-    "seattle_times_soup = BeautifulSoup(seattle_times, 'html.parser')\n",
-    "articles = seattle_times_soup.find_all('a')\n",
+    "def king5():\n",
+    "    king5 = urlopen('https://www.king5.com/')\n",
+    "    king5_soup = BeautifulSoup(king5, 'html.parser')\n",
+    "    articles = king5_soup.find_all('a', class_='headline-list__title')\n",
     "\n",
-    "articles = [i.text for i in articles]"
+    "    articles = [i.text for i in articles]\n",
+    "\n",
+    "    return articles"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -272,10 +269,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['COVID-19 Outbreak: Dozens of staff infected at SJ Kaiser Permanente ', \"Chris Harrison gives inside scoop on 'Bachelor' Matt James\", \"'Ratatouille: The TikTok Musical' aims to cook up first-of-its-kind fun\", 'Recall campaign against Gov. Newsom gains momentum', 'Analysts predict new trends in Bay Area rental market', 'Vacaville police dog punched by cop examined with no injuries', 'Defiant Napa restaurant offers in-person dining', 'Trump vetoes Calif. fishing bill over seafood trade deficit', 'Bay Area bridges go all-electronic with toll collection', 'Larry King hospitalized in Los Angeles with COVID, source says', 'You can now text 911 in Oakland ', 'McConnell, Pelosi homes vandalized after $2K relief fails', \"Goodbye 2020: Here's what happened this year\", \"90 arrested, 900 given warnings at 'super-spreader' Calif. New Year's parties\", 'New Mexico town says farewell to 2020 with dumpster fire', 'Building a Better Bay Area', 'This week on ABC7 Bay Area app', 'Prepare NorCal: Emergency Resources', 'Record 3 million have voted early in Georgia Senate runoff', 'Treacherous travel expected in much of eastern US', 'Protesters demand answers in 1st Minneapolis police shooting death since George Floyd', 'Iran says it plans to increase enrichment of uranium', \"New Year's reveler dancing with gun allegedly shoots, kills 4-year-old boy: Police\", '42 people mistakenly given antibody treatment instead of COVID-19 vaccine', 'US investigating unconfirmed intel that China offered bounties on American troops', 'Storm bringing snow, rain, ice and potentially thunderstorms, tornadoes\\xa0', \"Educator pleads to let go of 'catching up' at school in viral post\", \"Man deemed nation's most 'prolific serial killer' has died\", 'Northern California', 'AccuWeather forecast: Mostly cloudy, isolated drizzle tonight', 'Magnitude 4.3 earthquake hits Monterey County, felt in San Jose', 'Rain for 7 days straight in Bay Area, forecast shows', 'Tornado watch vs warning: What to do', 'Series of storms in Bay Area to usher in the new year', 'Track rain on Live Doppler 7', 'Magnitude 3.2 earthquake rattles south of Gilroy', \"Florida's falling iguanas, chilly forecast, pandemic create Christmas like no other\", 'Christmas forecast shows rain in Bay Area', 'Will it rain on Christmas? Bay Area weather forecast looks wet', 'Christmas Day snowstorm to blanket Tahoe', \"'Designing A Difference' keeps fashion industry alive in SF\", 'Charlie Brown Christmas Tree Grove continues to brighten the holiday season', \"'Tree Twins' spread much-needed holiday cheer in SF\", 'Feastin revolutionizes food delivery', \"Lucy Hale ready to 'roll with the punches' as NYRE co-host\", \"These stores will be open on New Year's Eve\", \"See who's performing during 'New Year's Rockin' Eve' on ABC\", \"Joe and Jill Biden to appear on 'New Year's Rockin' Eve'\", \"See who's hosting 'New Year's Rockin' Eve' on ABC this year \", \"Virtual New Year's Eve parties selling for more than $2K\", \"Looking back at Billy Porter's best fashion moments of 2020\", 'Homeless man rushes into fire to save shelter animals', \"Robot dance crew performs to 'Do You Love Me'\", 'Final goodbye: Remembering influential people who died in 2020', 'East Bay man raises $50k for cancer research with 1M-yard swim', 'Kentucky man clears snowy driveway with flamethrower', 'Lucky winner! Lottery ticket worth $18 million sold in San Jose', \"Effective date delayed for California's flavored tobacco ban\", 'Daniel the senior snuggler seeks a forever home', 'Shoppers look for after Xmas sales despite warnings to stay home', 'Moon ring lights up Bay Area skies ', 'Gingerbread monolith appears in SF', 'Crews add final touches to NYE crystal ball in Times Square', \"Powerball crowns 2021's 1st millionaire during 'New Year's Rockin' Eve'\", \"Ryan Seacrest celebrates 'Sweet 16' as host of 'New Year's Rockin' Eve'\", \"Everything to know about 'Soul' on Disney+\", 'Looking for a Bay Area food pantry? See our interactive map', 'How to recycle your Christmas tree', \"PHOTOS: Inside SF's historic Cliff House\", 'PHOTOS: Bay Area celebrates Biden, Harris win', \"PHOTOS: North Bay wildfires ravage California's wine country\", 'PHOTOS: Orange, hazy skies seen across Bay Area', \"Staggering photos show NorCal fires' devastation\", 'Powerful photos show clashes with police, George Floyd protestors', \"PHOTOS: 4-alarm fire at San Francisco's Fisherman's Wharf\", 'Photos: NorCal mall, restaurants reopen', 'PHOTOS: Honoring college seniors in the Bay Area', 'SPONSORED: Start 2021 off right with ABC7 and a little Aloha!', 'Kidde has safety tips to keep in mind while keeping your space festive', 'Gracias Christmas Concert brings the joy to you', 'Live Nation keeps the music going with Live From Home', 'Support the Bay: Find local businesses open and hiring', 'Allies in action: Local help with complicated issues', 'Check out our new ABC7 app!', 'Sign up for free newsletters from ABC7', 'Prepare NorCal: Emergency Resources', \"FINNEY'S FRIDAY FREE STUFF: See you soon!\", 'Recent ABC7 contests, promotions, sweepstakes winners', 'Official ABC7 Contest and Promotions Rules', 'ABC7 Live Bay Area Web Cams']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def abc7_news_sf():\n",
+    "    abc7_news_sf = urlopen('https://abc7news.com/')\n",
+    "    abc7_news_soup = BeautifulSoup(abc7_news_sf, 'html.parser')\n",
+    "    articles = abc7_news_soup.find_all('div', class_='headline')\n",
+    "\n",
+    "    articles = [i.text for i in articles]\n",
+    "\n",
+    "    return articles"
+   ]
   },
   {
    "cell_type": "code",
