Added additional scrapers from San Francisco.

--- a/news_scraper.ipynb
+++ b/news_scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        "'Program has sucessfully scraped and saved the data.'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,6 +92,7 @@
     "    articles = khou_houston_soup.find_all(class_='headline-list__title')\n",
     "\n",
     "    result = [i.text for i in articles if i.text != '']\n",
+    "    result = list(set(result))\n",
     "\n",
     "    return result"
    ]
@@ -108,7 +109,7 @@
     "    articles = fox26_houston_soup.find_all(class_='title')\n",
     "\n",
     "    result = [i.text for i in articles if i.text != '' and i.text != 'News' and i.text != 'Latest Local News' and i.text != '\\n        Latest News\\n      ']\n",
-    "\n",
+    "    result = list(set(result))\n",
     "    return result"
    ]
   },
@@ -148,6 +149,8 @@
     "\n",
     "    articles = [i.text for i in articles]\n",
     "    \n",
+    "    articles = list(set(articles))\n",
+    "    \n",
     "    return articles"
    ]
   },
@@ -172,6 +175,8 @@
     "\n",
     "    articles = [i.text for i in articles if i.text != '']\n",
     "    \n",
+    "    articles = list(set(articles))\n",
+    "    \n",
     "    return articles"
    ]
   },
@@ -189,6 +194,8 @@
     "    \n",
     "    articles = [i.text.replace('\\n', '').replace('\\t','') for i in articles]\n",
     "    \n",
+    "    articles = list(set(articles))\n",
+    "    \n",
     "    return articles"
    ]
   },
@@ -204,6 +211,8 @@
     "    articles = ktla_soup.find_all(class_='article-list__article-title')\n",
     "\n",
     "    articles = [i.text.replace('\\n', '').replace('\\t','') for i in articles]\n",
+    "    \n",
+    "    articles = list(set(articles))\n",
     "    \n",
     "    return articles"
    ]
@@ -225,6 +234,8 @@
     "\n",
     "    articles.remove('News')\n",
     "    articles.remove('Latest Local News')\n",
+    "    \n",
+    "    articles = list(set(articles))\n",
     "\n",
     "    return articles"
    ]
@@ -256,9 +267,39 @@
     "    articles = king5_soup.find_all('a', class_='headline-list__title')\n",
     "\n",
     "    articles = [i.text for i in articles]\n",
+    "    \n",
+    "    articles = list(set(articles))\n",
     "\n",
     "    return articles"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -287,30 +328,55 @@
     "    articles = abc7_news_soup.find_all('div', class_='headline')\n",
     "\n",
     "    articles = [i.text for i in articles]\n",
+    "    \n",
+    "    articles = list(set(articles))\n",
     "\n",
     "    return articles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def cbs_kpix_scraper():\n",
+    "    cbs_kpix_sf = urlopen('https://sanfrancisco.cbslocal.com/category/news/')\n",
+    "    cbs_kpix_soup = BeautifulSoup(cbs_kpix_sf, 'html.parser')\n",
+    "    titles = cbs_kpix_soup.find_all('strong', class_='title')\n",
+    "\n",
+    "    articles = []\n",
+    "\n",
+    "    for title in titles:\n",
+    "        check = title.text.split(' ')\n",
+    "        if len(check) > 4:\n",
+    "            articles.append(title.text)\n",
+    "            \n",
+    "    articles = list(set(articles))\n",
+    "        \n",
+    "    return articles"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "def the_sfnews_scraper():\n",
+    "    the_sfnews = urlopen('https://www.thesfnews.com/')\n",
+    "    the_sfnews_soup = BeautifulSoup(the_sfnews, 'html.parser')\n",
+    "    titles = the_sfnews_soup.find_all('a', class_='td-image-wrap')\n",
+    "\n",
+    "    articles = []\n",
+    "\n",
+    "    for title in titles:\n",
+    "        articles.append(title['title'])\n",
+    "    \n",
+    "    articles = list(set(articles))\n",
+    "    \n",
+    "    return articles"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -353,6 +419,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data"
+   ]
   },
   {
    "cell_type": "code",
