Updating main python file. Added additional news sources.

--- a/news_scraper.ipynb
+++ b/news_scraper.ipynb
@@ -58,135 +58,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Houston Scrapers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def abc13_houston_scraper():\n",
-    "    abc13_houston = urlopen('https://abc13.com/houston/')\n",
-    "    abc13_houston_soup = BeautifulSoup(abc13_houston, 'html.parser')\n",
-    "    articles = abc13_houston_soup.find_all(class_='headline')\n",
-    "\n",
-    "    result = list(set([i.text for i in articles if i.text != '']))\n",
-    "\n",
-    "    return result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def khou_houston_scraper():\n",
-    "    khou_houston = urlopen('https://www.khou.com/texas')\n",
-    "    khou_houston_soup = BeautifulSoup(khou_houston, 'html.parser')\n",
-    "    articles = khou_houston_soup.find_all(class_='headline-list__title')\n",
-    "\n",
-    "    result = [i.text for i in articles if i.text != '']\n",
-    "    result = list(set(result))\n",
-    "\n",
-    "    return result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def fox26_houston_scraper():\n",
-    "    fox26_houston = urlopen('https://www.fox26houston.com/news')\n",
-    "    fox26_houston_soup = BeautifulSoup(fox26_houston, 'html.parser')\n",
-    "    articles = fox26_houston_soup.find_all(class_='title')\n",
-    "\n",
-    "    result = [i.text for i in articles if i.text != '' and i.text != 'News' and i.text != 'Latest Local News' and i.text != '\\n        Latest News\\n      ']\n",
-    "    result = list(set(result))\n",
-    "    return result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def click2_houston_scraper():\n",
-    "    click2_houston = urlopen('https://www.click2houston.com/news/')\n",
-    "    click2_houston_soup = BeautifulSoup(click2_houston, 'html.parser')\n",
-    "    articles = click2_houston_soup.find_all(class_='no-margin')\n",
-    "\n",
-    "    result = [i.text for i in articles if i.text != '' and i.text != 'NewsSportsThings To DoFind Your CityDiscoverHouston LifeWeatherTrafficNewsletters']\n",
-    "    result = list(set(result))\n",
-    "    return result"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### New York City"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def nyc_abc7_scraper():\n",
-    "    nyc_abc7 = urlopen('https://abc7ny.com/new-york/')\n",
-    "    nyc_soup = BeautifulSoup(nyc_abc7, 'html.parser')\n",
-    "    articles = nyc_soup.find_all(class_='headline')\n",
-    "\n",
-    "    articles = [i.text for i in articles]\n",
-    "    \n",
-    "    articles = list(set(articles))\n",
-    "    \n",
-    "    return articles"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Los Angeles"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def abc7_la_scraper():\n",
-    "    ### Los Angeles, CA\n",
-    "    abc7_la = urlopen('https://abc7.com/los-angeles/')\n",
-    "    abc7_soup = BeautifulSoup(abc7_la, 'html.parser')\n",
-    "    articles = abc7_soup.find_all(class_='headline')\n",
-    "\n",
-    "    articles = [i.text for i in articles if i.text != '']\n",
-    "    \n",
-    "    articles = list(set(articles))\n",
-    "    \n",
-    "    return articles"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def nbc4_la():\n",
+    "def nbc4_la_scraper():\n",
     "    ### Los Angeles, CA\n",
     "    nbc4_la = urlopen('https://www.nbclosangeles.com/')\n",
     "    nbc4_soup = BeautifulSoup(nbc4_la, 'html.parser')\n",
