Ran program. Added sources from San Diego.

--- a/news_scraper.ipynb
+++ b/news_scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,10 +117,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def kswb_fox_5_scraper():\n",
+    "    kswb_fox_5_sd = urlopen('https://fox5sandiego.com/')\n",
+    "    kswb_fox_5_soup = BeautifulSoup(kswb_fox_5_sd, 'html.parser')\n",
+    "    titles = kswb_fox_5_soup.find_all('h3', class_='article-list__article-title')\n",
+    "\n",
+    "    articles = []\n",
+    "\n",
+    "    for title in titles:\n",
+    "        if len(title) > 2:\n",
+    "            articles.append(title.text.rstrip().lstrip())\n",
+    "    \n",
+    "    articles = list(set(articles))   \n",
+    "    \n",
+    "    return articles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Latest Coronavirus Impacts:  Stay-Home Order, Curfew Lifted; Some Sports, Live Entertainment Return\n",
+      "CVFD Battling Building Fire\n",
+      "Heavy Snow, Hail and High Winds: Winter Storm Blows Through San Diego\n",
+      "Will A UV Light Device Kill Coronavirus?\n",
+      "Grandmother Dies Battling COVID-19, Daughter Vows to Raise Awareness In Her Memory\n",
+      "California Measure Aims to Pay Off 80% of Most Unpaid Rent\n",
+      "Winter Weather Batters County as Restaurants Prep for Return of Outdoor Dining\n",
+      "Photos: Winter Storm Batters San Diego County With Trifecta of Snow, Wind and Rain\n",
+      "Legion to Call Vegas Home for 2021 MLR Season\n",
+      "Gulls Roster Flush With Top Prospects\n",
+      "San Diego Zoo Safari Park Gorilla Troop Recovering From COVID-19\n",
+      "SD Humane Society Begins Wildlife Baby Shower To Help Animals This Spring\n",
+      "San Diego Family's Warning as COVID-19 Deaths Continue Rising\n",
+      "Search Warrant Served at Home of Missing Chula Vista Mom\n",
+      "Study Suggests Those With Severe COVID-19 Symptoms Have Better Chance of Fighting Reinfection\n",
+      "Sign Language Interpreter Who Served Hawaiians During Pandemic Dies From Coronavirus in San Diego\n",
+      "Two People Hospitalized After Bar Fight in El Cajon\n",
+      "Traffic Snarls in National City After Big Rig Hits Center Divider, Minivan on I-805\n",
+      "U.S. Will Require Negative COVID-19 Results From Airline Passengers Prior to Arrival\n",
+      "San Diego County Sheriff's Department Continues Search for Man Missing Since Dec. 23\n"
+     ]
+    }
+   ],
+   "source": [
+    "def nbc7_san_diego_scraper():\n",
+    "\n",
+    "    nbc7_san_diego = urlopen('https://www.nbcsandiego.com/news/local/')\n",
+    "    nbc7_san_diego_soup = BeautifulSoup(nbc7_san_diego, 'html.parser') \n",
+    "    titles = nbc7_san_diego_soup.find_all('h3', class_='story-card__title')\n",
+    "\n",
+    "    articles = []\n",
+    "\n",
+    "    for title in titles:\n",
+    "        print(title.text.rstrip().lstrip())"
+   ]
   },
   {
    "cell_type": "code",
